force-app/main/default/objects/saleswings__SalesWings_Options__c/saleswings__SalesWings_Options__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SalesWings Options</label>
</CustomObject>