force-app/main/default/objects/saleswings__SalesWings_Options__c/fields/saleswings__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Batch_Size__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>