force-app/main/default/objects/saleswings__SalesWings_Options__c/fields/saleswings__Data_Truncation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Data_Truncation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Truncation Enabled?</label>
    <type>Checkbox</type>
</CustomField>