force-app/main/default/objects/saleswings__SalesWings_Options__c/fields/saleswings__EndpointBaseOverride__c.field-meta.xml
<CustomField>
    <fullName>saleswings__EndpointBaseOverride__c</fullName>
    <label>EndpointBaseOverride</label>
    <length>255</length>
    <type>Text</type>
</CustomField>