force-app/main/default/objects/saleswings__SalesWings_Options__c/fields/saleswings__Log_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Log_Batch_Size__c</fullName>
    <label>Log Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>