force-app/main/default/objects/saleswings__SalesWings_Options__c/fields/saleswings__LogLevel__c.field-meta.xml
<CustomField>
    <fullName>saleswings__LogLevel__c</fullName>
    <inlineHelpText>1 = Info, 2 = Debug, 3 = Error</inlineHelpText>
    <label>LogLevel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>