force-app/main/default/objects/saleswings__SalesWings_Options__c/fields/saleswings__Match_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Match_Batch_Size__c</fullName>
    <label>Match Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>