force-app/main/default/objects/saleswings__SalesWings_Options__c/fields/saleswings__Page_Count__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Page_Count__c</fullName>
    <label>Page Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>