force-app/main/default/objects/saleswings__SalesWings_Options__c/fields/saleswings__Sync_Gap_Minutes__c.field-meta.xml
<CustomField>
    <fullName>saleswings__Sync_Gap_Minutes__c</fullName>
    <label>Sync Gap Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>